Update quiz.html adding it to other websites

--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,19 @@
       color: #fff;
       padding: 20px;
     }
+nav {
+      background-color: #fa9d29;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
 
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 10px;
+      margin: 0 10px;
+    }
     section {
       padding: 20px;
     }
@@ -56,7 +68,12 @@
     <h1>Real Estate Investor Quiz</h1>
     <p>Answer the following questions to find out which type of real estate investor you are.</p>
   </header>
-
+ <nav>
+    <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
+    <a href="https://www.linkedin.com/company/84473948/admin/feed/posts/">LinkedIn</a>
+    <a href="https://wa.me/972545555127?text=Hello,+I+am+interested+in+knowing+more+about+the+Bengurion+real+estate+community.">Contact Us</a>
+    <a href="https://www.linkedin.com/in/yair-azrieli">Get in touch</a>
+  </nav>
   <section>
     <label for="risk">1. Your tolerance towards risk (1 - low, 5 - high):</label>
     <select id="risk">
