--- a/quiz.html
+++ b/quiz.html
@@ -68,11 +68,11 @@ nav {
     <h1>Real Estate Investor Quiz</h1>
     <p>Answer the following questions to find out which type of real estate investor you are.</p>
   </header>
- <nav>
+<nav>
     <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
     <a href="https://www.linkedin.com/company/84473948/admin/feed/posts/">LinkedIn</a>
-    <a href="https://wa.me/972545555127?text=Hello,+I+am+interested+in+knowing+more+about+the+Bengurion+real+estate+community.">Contact Us</a>
-    <a href="https://www.linkedin.com/in/yair-azrieli">Get in touch</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/index"> Home</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/team">About the team</a>
   </nav>
   <section>
     <label for="risk">1. Your tolerance towards risk (1 - low, 5 - high):</label>
