--- a/quiz.html
+++ b/quiz.html
@@ -93,7 +93,7 @@ nav {
       <option value="5">5</option>
     </select>
 
-    <label for="handsFull">3. Do you like the idea of getting your hands full of work for some extra money?</label>
+    <label for="handsFull">3. Do you like the idea of getting your hands full of work for extra money?</label>
     <select id="handsFull">
       <option value="yes">Yes</option>
       <option value="no">No</option>
