--- a/team.html
+++ b/team.html
@@ -114,7 +114,7 @@
     <div class="property-card">
       <img src="https://media-mrs2-2.cdn.whatsapp.net/v/t61.24694-24/257702498_1598800477149559_2987735315762860355_n.jpg?ccb=11-4&oh=01_AdRhHaAEpIEe3qlX-SXtCu1R8SF5I-suvElGZdoYEtSdFA&oe=6599C94B&_nc_sid=e6ed6c&_nc_cat=108" alt="Team Member 1 Image">
       <h2>Yair Azrieli</h2>
-      <p>Commuinty nanager</p>
+      <p>Commuinty manager</p>
       <p>With over 3 years of experience, Yair is dedicated to get pepole into real estate.</p>
     </div>
 
@@ -130,7 +130,7 @@
       <div class="property-card">
       <img src="https://media-mrs2-2.cdn.whatsapp.net/v/t61.24694-24/375508419_721370866490364_9060492902027513406_n.jpg?ccb=11-4&oh=01_AdRDqUz04RNV37Dg3kVIMilKlXTN-zNlX96gmQ0bjWIvQQ&oe=6599C771&_nc_sid=e6ed6c&_nc_cat=110" alt="Team Member 2 Image">
       <h2>Ariel guralnik</h2>
-      <p>Event manger</p>
+      <p>Event manager</p>
       <p>Ariel set the process in motion, making dreams come true!</p>
     </div>
 
