--- a/quiz.html
+++ b/quiz.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      background-color: #fa9d29;
+      background-color: #ffad47;
       color: #fff;
       padding: 20px;
     }
