Update team.html NA

--- a/team.html
+++ b/team.html
@@ -131,7 +131,7 @@
       <img src="https://media-mrs2-2.cdn.whatsapp.net/v/t61.24694-24/375508419_721370866490364_9060492902027513406_n.jpg?ccb=11-4&oh=01_AdRDqUz04RNV37Dg3kVIMilKlXTN-zNlX96gmQ0bjWIvQQ&oe=6599C771&_nc_sid=e6ed6c&_nc_cat=110" alt="Team Member 2 Image">
       <h2>Ariel guralnik</h2>
       <p>Event manager</p>
-      <p>Ariel set the process in motion, making dreams come true!</p>
+      <p>Ariel set the all process in motion, making dreams come true!</p>
     </div>
 
     <div class="property-card">
