--- a/quiz.html
+++ b/quiz.html
@@ -3,23 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real Estate Investor Quiz</title>
+  <title>Real Estate Blog</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f8f9fa;
-      color: #343a40;
-      text-align: center;
-    }
-
-    header {
-      background-color: #ffad47;
-      color: #000000;
-      padding: 20px;
-    }
-nav {
+    nav {
       background-color: #fa9d29;
       color: #fff;
       padding: 10px;
@@ -32,43 +18,52 @@ nav {
       padding: 10px;
       margin: 0 10px;
     }
+   
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f9fa;
+      color: #343a40;
+      text-align: center;
+    }
+
+   header {
+      background-color: #ffad47;
+      color: #000000;
+      padding: 20px;
+    }
+
     section {
       padding: 20px;
     }
 
-    label {
-      display: block;
-      margin: 10px 0;
+    article {
+      margin-bottom: 20px;
     }
 
-    select, input {
-      padding: 10px;
-      margin-top: 5px;
-      width: 100%;
+    h2 {
+      color: #007bff;
     }
 
-    button {
-      background-color: #28a745;
+    footer {
+      background-color: #343a40;
       color: #fff;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    outcome {
-      font-weight: bold;
-      margin-top: 20px;
+      text-align: center;
+      padding: 10px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Real Estate Investor Quiz</h1>
-    <p>Answer the following questions to find out which type of real estate investor you are.</p>
+    <h1>Real Estate Blog</h1>
+    <p>Explore articles on different real estate investment types.</p>
   </header>
-  
+
   <nav>
     <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
     <a href="https://www.linkedin.com/company/84473948/admin/feed/posts/">LinkedIn</a>
@@ -77,60 +72,30 @@ nav {
   </nav>
   
   <section>
-    <label for="risk">1. Your tolerance towards risk (1 - low, 5 - high):</label>
-    <select id="risk">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-    </select>
+    <article>
+      <h2><a href="#">Flipping invesment</a></h2>
+      <p>Ever dreamed of turning a run-down property into a profit goldmine? Welcome to the thrilling world of Real Estate Flipping, where every renovation is an adventure!</p>
+    </article>
 
-    <label for="capital">2. How high is your initial capital (1 - low, 5 - high):</label>
-    <select id="capital">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-    </select>
+    <article>
+      <h2><a href="#">REIT Investment</a></h2>
+      <p>Imagine owning a piece of the real estate pie without dealing with the headaches of property management. Sounds like a dream, right? Welcome to the world of REITs.</p>
+    </article>
 
-    <label for="handsFull">3. Do you like the idea of getting your hands full of work for extra money?</label>
-    <select id="handsFull">
-      <option value="yes">Yes</option>
-      <option value="no">No</option>
-    </select>
+    <article>
+      <h2><a href="#">Multifamily Investment</a></h2>
+      <p>Ever wondered how you could invest in real estate and potentially have others pay your mortgage? Welcome to the world of Multifamily Investment – where one property can house many dreams.</p>
+    </article>
 
-    <button onclick="calculateOutcome()">Get Your Investment Type</button>
-
-    <outcome id="result"></outcome>
+    <article>
+      <h2><a href="#">Single House Investment</a></h2>
+      <p>Looking for a more traditional route to real estate success? Single House Investment might be the key to building your property empire, one home at a time.</p>
+    </article>
   </section>
 
-  <script>
-    function calculateOutcome() {
-      const risk = document.getElementById("risk").value;
-      const capital = document.getElementById("capital").value;
-      const handsFull = document.getElementById("handsFull").value;
-      const resultElement = document.getElementById("result");
-
-      let outcome = "";
-
-      
-      if (risk >= 4 && capital >= 4 && handsFull === "yes") {
-        outcome = "Multifamily Investment";;
-      } else if (capital <= 3 && handsFull === "no") {
-        outcome = "REIT Investment";
-      } else if (risk >= 4 && handsFull === "yes") {
-        outcome = "Real Estate Flipping investment ";
-      } else if (capital >= 4 && (risk < 4 || handsFull === "no")) {
-        outcome = "Single House Investment";
-      } else {
-        outcome = "Single House Investment";
-      }
-
-     resultElement.innerText = `Based on your answers, you are recommended for: 🥁🥁🥁 ${outcome}`; 
-    }
-  </script>
+  <footer>
+    &copy; 2024 Real Estate Blog. All rights reserved.
+  </footer>
 
 </body>
 </html>
