Update blog.html colors and linking

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Real Estate Blog</title>
   <style>
+    nav {
+      background-color: #fa9d29;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
+    }
+
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 10px;
+      margin: 0 10px;
+    }
+   
     body {
       font-family: 'Arial', sans-serif;
       margin: 0;
@@ -14,9 +28,9 @@
       text-align: center;
     }
 
-    header {
-      background-color: #007bff;
-      color: #fff;
+   header {
+      background-color: #ffad47;
+      color: #000000;
       padding: 20px;
     }
 
@@ -50,9 +64,16 @@
     <p>Explore articles on different real estate investment types.</p>
   </header>
 
+  <nav>
+    <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
+    <a href="https://www.linkedin.com/company/84473948/admin/feed/posts/">LinkedIn</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/index"> Home</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/team">About the team</a>
+  </nav>
+  
   <section>
     <article>
-      <h2><a href="#">Real Estate Flipper</a></h2>
+      <h2><a href="#">Flipping invesment</a></h2>
       <p>Ever dreamed of turning a run-down property into a profit goldmine? Welcome to the thrilling world of Real Estate Flipping, where every renovation is an adventure!</p>
     </article>
 
