--- a/blog.html
+++ b/blog.html
@@ -73,22 +73,22 @@
   
   <section>
     <article>
-      <h2><a href="#">Flipping invesment</a></h2>
+      <h2><a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/flippingarticle">Flipping invesment</a></h2>
       <p>Ever dreamed of turning a run-down property into a profit goldmine? Welcome to the thrilling world of Real Estate Flipping, where every renovation is an adventure!</p>
     </article>
 
     <article>
-      <h2><a href="#">REIT Investment</a></h2>
+      <h2><a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/reitarticle">REIT Investment</a></h2>
       <p>Imagine owning a piece of the real estate pie without dealing with the headaches of property management. Sounds like a dream, right? Welcome to the world of REITs.</p>
     </article>
 
     <article>
-      <h2><a href="#">Multifamily Investment</a></h2>
+      <h2><a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/multyfamilyarticle">Multifamily Investment</a></h2>
       <p>Ever wondered how you could invest in real estate and potentially have others pay your mortgage? Welcome to the world of Multifamily Investment – where one property can house many dreams.</p>
     </article>
 
     <article>
-      <h2><a href="#">Single House Investment</a></h2>
+      <h2><a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/singlehousearticale">Single House Investment</a></h2>
       <p>Looking for a more traditional route to real estate success? Single House Investment might be the key to building your property empire, one home at a time.</p>
     </article>
   </section>
