--- a/singlehousearticale.html
+++ b/singlehousearticale.html
@@ -74,7 +74,7 @@
   </header>
    <nav>
     <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
-    <a href="https://www.linkedin.com/company/84473948/admin/feed/posts/">LinkedIn</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/blog">Blog</a>
     <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/index"> Home</a>
     <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/team">About the team</a>
   </nav>
