--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
 
   <nav>
     <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
-    <a href="https://www.linkedin.com/company/84473948/admin/feed/posts/">LinkedIn</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/blog">Blog</a>
     <a href="https://wa.me/972545555127?text=Hello,+I+am+interested+in+knowing+more+about+the+Bengurion+real+estate+community.">Contact Us</a>
     <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/index">Home</a>
   </nav>
