Update quiz.html NA

--- a/quiz.html
+++ b/quiz.html
@@ -101,7 +101,7 @@
       <option value="5">5</option>
     </select>
 
-    <label for="handsFull">3. Are you willing to do hands-on work for extra income in real estate, like renovations or property management?</label>
+    <label for="handsFull">3. Are you willing to do hands-on work for extra income, like renovations or property management?</label>
     <select id="handsFull">
       <option value="yes">Yes</option>
       <option value="no">No</option>
