Update index.html NA

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <a href="https://www.facebook.com/profile.php?id=100066831075022">Facebook</a>
     <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/blog">Blog</a>
     <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/quiz"> Quiz</a>
-    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/team">About the team</a>
+    <a href="https://yairazrieli.github.io/Ben-gurion-Real-estate-community/team">The team</a>
   </nav>
 
   <section>
